<resources>
    <string name="app_name">Timetable Vulcan2</string>
    <string name="unit">Unit</string>
    <string name="classroom">Classroom</string>
    <string name="teacher">Teacher</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="change_school_link">Change link to timetable</string>
    <string name="login_text1">Enter link to Your school timetables</string>
    <string name="login_text2">for example:</string>
    <string name="loging_text3" translatable="false">lo01.pl/plan/\nzamoy.lublin.pl/plan/\nwww.paderewski.lublin.pl/plany/lic/</string>
    <string name="enter_link_to_school_timetable">Enter link to school timetable</string>
    <string name="connect">Connect!</string>
    <string name="error_timetable">Timetable show error!</string>

    <string name="ad_unit_id_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="turn_on_internet">Turn on internet!</string>
    <string name="bad_link">Bad link! Try again</string>
    <string name="no_data">No data!</string>
    <!--<string name="ad_unit_id_app" translatable="false">ca-app-pub-9139309714448232~7948177322</string>-->

</resources>
